fix(settings): checkboxes on small screens

--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -147,6 +147,14 @@
 			ul {
 				flex: 1;
 			}
+
+			@include mixins.respond-to(femto-down) {
+				flex-direction: column;
+
+				ul {
+					width: 100%;
+				}
+			}
 		}
 
 		.button-group {
